0.21.3 - in development
-----------------------
Maintenance release.

 * Avoid AttributeError on 'is_ignored' from treewidget filtering involving
   unversioned files that have been moved. (Martin Packman, Bug #557603)
 * Stringify tab_width settings while writing it to branch config.
   (Workaround for bug #912344, Alexander Belchenko)


0.21.2 - 2011/12/07
-------------------
Maintenance release.

 * qbrowse:
   * Does not crash anymore when called for shared repository.
     (André Bachmann, Alexander Belchenko, Bug #578935)
 * qconfig:
   * Fixed Set Default button in Merge tab. (Gordon Tyler, Bug #820635)
 * qdiff:
   * Fixed ignore whitespace changes code.
     (Alexander Belchenko, Bug #827391)
 * qlog:
   * Show context menu properly after re-load of branch(es).
     (IWATA Hidetaka, Bug #744904)
 * qrun:
   * Command-line arguments with spaces properly quoted.
     (Alexander Belchenko, Bug #824381)
 * qunshelve:
   * Disable OK button while executing unshelve. (IWATA Hidetaka, Bug #842818)
   * Avoid NoSuchFile error when working tree has added and removed file. 
     (IWATA Hidetaka, Bug #842842)
 * Updated translations.


0.21.1 - 2011/08/04
-------------------
Maintenance release.

 * qlog:
   * Do not crash on ghost revisions. (Jonathan Riddell, Bug #785967)
 * qswitch:
   * Support unicode locations. (Alexander Belchenko, Bug #819259)


0.21 "Tilia" - 2011/07/21
-------------------------
What's new in this release:

QBzr 0.21 is companion release for bzr 2.4, and compatible with bzr 2.3.
New features in this release:

Now you can select changes to shelve and unshelve your saved changes with
new shiny qshelve and qunshelve dialogs.

qdiff window has been reworked and all controls moved to a toolbar, similar to
one in qannotate window. Also qdiff toolbar provides you new functions: text
search within active pane and also knob to ignore whitespace changes (it's 
also available as command-line option).
